refactor: update operationIds in spec to reflect better method names
