# src/customapi.ts
@@ -1,4 +1,4 @@
-import { DefaultApi, Configuration, UsersPostRequest, UsersIdAttributesPostRequest } from '../'
+import { DefaultApi, Configuration, CreateUserRequest, CreateAttributesRequest } from '../'
 
 const API_BASE_PATH = 'http://localhost:9001/api'
 
@@ -8,27 +8,27 @@ const api = new DefaultApi(config)
 async function main() {
     try {
         // Create a new user
-        const req: UsersPostRequest = {
+        const req: CreateUserRequest = {
             user: { username: 'Durga' }
         }
-        const createUserResponse = await api.usersPost(req)
+        const createUserResponse = await api.createUser(req)
         console.log('User created successfully:', createUserResponse)
         
         // Get all users
-        const getUsersResponse = await api.usersGet()
+        const getUsersResponse = await api.getAllUsers()
         console.log('List of users:', getUsersResponse)
         
         const uid: number = getUsersResponse[0].iD || 0
         
         // Update a user by ID
-        await api.usersIdPut({ id: uid, user: { username: 'Anant' } });
+        await api.updateUser({ id: uid, user: { username: 'Anant' } });
         
         // Get a user by ID
-        const getUserResponse = await api.usersIdGet({ id: uid });
+        const getUserResponse = await api.getUser({ id: uid });
         console.log('User details:', getUserResponse);
         
         // Post user attributes
-        const req2 : UsersIdAttributesPostRequest = {
+        const req2 : CreateAttributesRequest = {
             id: uid,
             requestBody: {
                 'role': 'God',
@@ -39,21 +39,21 @@ async function main() {
         }
         
         // Create user attributes
-        await api.usersIdAttributesPost(req2)
+        await api.createAttributes(req2)
         
         // Get user attributes
-        const attr = await api.usersIdAttributesGet({id:1})
+        const attr = await api.getAttributes({id:1})
         console.log(attr)
         
         // Get a user attribute by name
-        const userAttribute = await api.usersIdAttributesNameGet({ id: uid, name: 'role' });
+        const userAttribute = await api.getAttributeByName({ id: uid, name: 'role' });
         console.log('User attribute:', userAttribute);
         
         // Update a user attribute by name
-        await api.usersIdAttributesNamePut({ id: uid, name: 'role', requestBody: { role: 'manager' }});
+        await api.updateAttributeByName({ id: uid, name: 'role', requestBody: { role: 'manager' }});
         
         // Post user events
-        await api.usersIdEventsPost({
+        await api.createEvent({
             id: uid,
             event: {
                 specversion: '1.0',
@@ -71,27 +71,27 @@ async function main() {
         });
         
         // Post user traits
-        await api.usersIdTraitsPost({ id: uid, requestBody: { hobby: 'reading' } });
+        await api.createTraits({ id: uid, requestBody: { hobby: 'reading' } });
         
         // Get user traits by ID
-        const userTraits = await api.usersIdTraitsGet({ id: uid });
+        const userTraits = await api.getAllTraits({ id: uid });
         console.log('User traits:', userTraits);
         
         // Get a user trait by name
-        const userTrait = await api.usersIdTraitsNameGet({ id: uid, name: 'hobby' });
+        const userTrait = await api.getTraitByName({ id: uid, name: 'hobby' });
         console.log('User trait:', userTrait);
         
         // Update a user trait by name
-        await api.usersIdTraitsNamePut({ id: uid, name: 'hobby', requestBody: { 'hobby': 'chess' } });
+        await api.updateTraitByName({ id: uid, name: 'hobby', requestBody: { 'hobby': 'chess' } });
         
         // Delete a user attribute by name
-        await api.usersIdAttributesNameDelete({ id: uid, name: 'role' });
+        await api.deleteAttributeByName({ id: uid, name: 'role' });
         
         // Delete a user trait by name
-        await api.usersIdTraitsNameDelete({ id: uid, name: 'hobby' });
+        await api.deleteTraitByName({ id: uid, name: 'hobby' });
         
         // Delete a user by ID
-        const deleteUserResponse = await api.usersIdDelete({ id: uid });
+        const deleteUserResponse = await api.deleteUser({ id: uid });
         console.log('User deleted:', deleteUserResponse);
     } catch (error) {
         console.error('Error:', error)
